--- a/assets/css/slide.css
+++ b/assets/css/slide.css
@@ -91,9 +91,9 @@ a.slider {
     animation: slideOutRight 1s forwards;
  }
  
- #prev-btn {
+ #prev_btn {
   border: none;
-  color: white;
+  color: green;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -103,7 +103,7 @@ a.slider {
 
  #next_btn { 
    border: none;
-   color: white;
+   color: green;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
